QCombobox: propagate the palette to the embedded line edit

Let the new created embedded QLineEdit use the palette from QCombobox,
when calling [setEditable(true)]

Fixes: QTBUG-81533
Change-Id: Ia406dd8122a348e185f0e94d027646b95eeaa76e
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 231be2e0a192f16141c12888e126bb2284b29b9f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>